@@ -5,7 +5,6 @@ import com.hackathon.bankingapp.entities.Transaction;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class TransactionMapper {
@@ -13,7 +12,7 @@ public class TransactionMapper {
     public List<TransactionDto.Response> toDtoList(List<Transaction> transactions) {
         return transactions.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private TransactionDto.Response toResponse(Transaction transaction) {
